# CoST

./: .gitignore  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  comprehensive_perf_results_20251205_041836.csv  run_ablation.sh  run_overall.sh  run_sensitivity.sh
algorithm/: cost_compressor.cc  cost_compressor.h
baselines/alp/: CMakeLists.txt
baselines/alp/include/alp/: utils.hpp
baselines/buff/: CMakeLists.txt
baselines/chimp128/: CMakeLists.txt
baselines/deflate/: CMakeLists.txt
baselines/elf/: CMakeLists.txt
baselines/fpc/: CMakeLists.txt  input_bit_stream.h
baselines/gorilla/: CMakeLists.txt
baselines/lz4/: CMakeLists.txt  lz4_compressor.cc  lz4_compressor.h  lz4_decompressor.cc  lz4_decompressor.h
baselines/lz77/: CMakeLists.txt
baselines/machete/: CMakeLists.txt
baselines/serf/: net_serf_qt_compressor.cc  net_serf_qt_compressor.h  net_serf_qt_decompressor.cc  net_serf_xor_compressor.cc  net_serf_xor_compressor.h  net_serf_xor_decompressor.cc  serf_qt_compressor.cc  serf_qt_curve_compressor.cc  serf_qt_curve_compressor.h  serf_qt_curve_decompressor.cc  serf_qt_curve_decompressor.h  serf_qt_decompressor.cc  serf_qt_linear_compressor.cc  serf_qt_linear_compressor.h  serf_qt_linear_decompressor.cc  serf_qt_linear_decompressor.h
baselines/sim_piece/: CMakeLists.txt
baselines/snappy/: snappy-stubs-public.h
baselines/sprintz/: CMakeLists.txt  bitpack.h  delta.cpp  entropy.cpp  predict.cpp  sprintz_delta.h  univariate_8b.cpp  univariate_8b.h  util.h
baselines/sz_adt/: CMakeLists.txt
baselines/traj-module/: .gitignore  CSV输出说明.md  INTEGRATION_CHECK.md  README_TEST.md  测试说明.md  (+7 more)
data/: Geolife_100k_with_id_downsample_10x.csv  Geolife_100k_with_id_downsample_20x.csv  Geolife_100k_with_id_downsample_40x.csv  Geolife_100k_with_id_downsample_5x.csv  README.md  Trajtory_100k_with_id_downsample_10x.csv  Trajtory_100k_with_id_downsample_20x.csv  Trajtory_100k_with_id_downsample_40x.csv  Trajtory_100k_with_id_downsample_5x.csv  WX_taxi_100k_with_id_downsample_10x.csv  WX_taxi_100k_with_id_downsample_20x.csv  WX_taxi_100k_with_id_downsample_40x.csv  WX_taxi_100k_with_id_downsample_5x.csv
utils/: elias_delta_codec.cc  elias_delta_codec.h  elias_gamma_codec.cc  elias_gamma_codec.h  input_bit_stream.cc  input_bit_stream.h  output_bit_stream.cc  output_bit_stream.h  post_office_solver.h  serf_utils_64.h
(+45 files in other folders)
